<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/adminpanel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="Admin Panel"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminpanel_text" />

    <TextView
        android:id="@+id/registered_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Registered Users"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ScrollView
        android:layout_width="370dp"
        android:layout_height="210dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminpanel_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/kitobone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#7C6CF2DB"
                android:paddingStart="7dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/userinfoone"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/kitobtwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#7C6CF2DB"
                android:paddingStart="7dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/userinfotwo"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/kitobthree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#7C6CF2DB"
                android:paddingStart="7dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/userinfothree"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/borrowed_books"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="276dp"
        android:text="Borrowed books"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="370dp"
        android:layout_height="210dp"
        android:layout_marginTop="325dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminpanel_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#7C6CF2DB"
                android:paddingStart="7dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/bookinfoone"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/book_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#7C6CF2DB"
                android:paddingStart="7dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/bookinfotwo"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/book_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#7C6CF2DB"
                android:paddingStart="7dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/bookinfothree"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/addbook_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="600dp"
        android:backgroundTint="#2196F3"
        android:text="Add book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminpanel_text" />
</androidx.constraintlayout.widget.ConstraintLayout>